--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-- [基本原理](#基本原理)
-- [1. Time Tick](#1-time-tick)
-  - [1.1. 虚拟化下的timer](#11-虚拟化下的timer)
-- [2. 相关代码](#2-相关代码)
-- [3. 物理芯片介绍](#3-物理芯片介绍)
-  - [3.1. PIT主要为Intel 8254 PIT芯片](#31-pit主要为intel-8254-pit芯片)
-  - [3.2. PIC主要为8259A PIC芯片](#32-pic主要为8259a-pic芯片)
-- [4. 整体流程](#4-整体流程)
+- [1. 基本原理](#1-基本原理)
+- [2. Time Tick](#2-time-tick)
+  - [2.1. 虚拟化下的timer](#21-虚拟化下的timer)
+- [3. 相关代码](#3-相关代码)
+- [4. 物理芯片介绍](#4-物理芯片介绍)
+  - [4.1. PIT主要为Intel 8254 PIT芯片](#41-pit主要为intel-8254-pit芯片)
+  - [4.2. PIC主要为8259A PIC芯片](#42-pic主要为8259a-pic芯片)
+- [5. 整体流程](#5-整体流程)
 - [6. 初始化中断控制器(PIC)](#6-初始化中断控制器pic)
   - [6.1. QEMU](#61-qemu)
   - [6.2. 整体流程](#62-整体流程)
@@ -20,16 +20,16 @@
     - [6.4.2. 三种设备在虚拟bus上的结构](#642-三种设备在虚拟bus上的结构)
   - [6.5. kvm_ioapic_init(): ioapic的初始化](#65-kvm_ioapic_init-ioapic的初始化)
   - [6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#66-kvm_setup_default_irq_routing-默认中断路由表的初始化)
-- [初始化虚拟PIT](#初始化虚拟pit)
-  - [QEMU](#qemu)
+- [7. 初始化虚拟PIT](#7-初始化虚拟pit)
+  - [7.1. QEMU](#71-qemu)
 
 <!-- /code_chunk_output -->
 
-# 基本原理
+# 1. 基本原理
 
 中断虚拟化**起始关键**在于**对中断控制器的虚拟化**，中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。
 
-# 1. Time Tick
+# 2. Time Tick
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
@@ -38,7 +38,7 @@
 - PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
 
-## 1.1. 虚拟化下的timer
+## 2.1. 虚拟化下的timer
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
@@ -52,13 +52,13 @@
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
-# 2. 相关代码
+# 3. 相关代码
 
 ![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
 
-# 3. 物理芯片介绍
+# 4. 物理芯片介绍
 
-## 3.1. PIT主要为Intel 8254 PIT芯片
+## 4.1. PIT主要为Intel 8254 PIT芯片
 
 **PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
 
@@ -72,7 +72,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-## 3.2. PIC主要为8259A PIC芯片
+## 4.2. PIC主要为8259A PIC芯片
 
 **PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
@@ -86,7 +86,7 @@ PIC有三个重要的寄存器:
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
-# 4. 整体流程
+# 5. 整体流程
 
 整个主要流程:
 
@@ -532,9 +532,9 @@ static int setup_routing_entry(struct kvm *kvm,
 
 之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把`e->gsi = ue->gsi;e->type = ue->type;`然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**，**APIC**的话设置的是`kvm_set_ioapic_irq`函数，而**pic**的话设置`kvm_set_pic_irq`函数，然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。回到`setup_routing_entry`函数中，就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**双链表**中。再回到`kvm_set_irq_routing`函数中，接下来就是**更新kvm结构**中的`irq_routing`指针了。
 
-# 初始化虚拟PIT
+# 7. 初始化虚拟PIT
 
-## QEMU
+## 7.1. QEMU
 
 PIT创建:
 
