--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -27,7 +27,13 @@
 
 # 1. 基本原理
 
-中断虚拟化**起始关键**在于**对中断控制器的虚拟化**，中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。
+中断虚拟化**起始关键**在于**对中断控制器的虚拟化**.
+
+在正常系统中:
+
+中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等.
+
+针对这些关键部件的虚拟化是中断虚拟化的重点。
 
 # 2. Time Tick
 
@@ -96,6 +102,13 @@ PIC有三个重要的寄存器:
 
 # 6. 初始化中断控制器(PIC)
 
+考虑到中断实时性对性能的影响，**PIC和IOAPIC**的**设备模拟主要逻辑**都放到了**kvm模块**进行实现，**每个VCPU**的**LAPIC**则**完全放到kvm**中进行实现。 
+
+**i8259控制器**和**IOAPIC**的创建和初始化由**qemu和kvm配合完成**，包括了2个方面：
+
+- **kvm**中**设备相关数据结构初始化**
+- **qemu中设备模拟的初始化**
+
 ## 6.1. QEMU
 
 qemu代码中中断控制器的kvm内核初始化流程为：
@@ -112,7 +125,7 @@ configure_accelerator
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 ```
 
-qemu通过kvm的ioctl命令KVM_CREATE_IRQCHIP调用到kvm内核模块中，在内核模块中创建和初始化PIC/IOAPIC设备（创建设备对应的数据结构并将设备注册到总线上）。
+qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
 ## 6.2. 整体流程
 
