--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -3,7 +3,12 @@
 
 # 中断控制器的创建和初始化
 
-考虑到中断实时性对性能的影响，PIC和IOAPIC的设备模拟主要逻辑都放到了kvm模块进行实现，每个VCPU的LAPIC则完全放到kvm中进行实现。 i8259控制器和IOAPIC的创建和初始化由qemu和kvm配合完成，包括了kvm中设备相关数据结构初始化和qemu中设备模拟的初始化2个方面：
+考虑到中断实时性对性能的影响，**PIC和IOAPIC**的**设备模拟主要逻辑**都放到了**kvm模块**进行实现，**每个VCPU**的**LAPIC**则**完全放到kvm**中进行实现。 
+
+**i8259控制器**和**IOAPIC**的创建和初始化由**qemu和kvm配合完成**，包括了2个方面：
+
+- **kvm**中**设备相关数据结构初始化**
+- **qemu中设备模拟的初始化**
 
 ## 中断控制器的创建
 
