--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -44,6 +44,8 @@
 
 LAPIC每CPU一个；IO APIC可以一个系统里面有多个，但是KVM中只实现了一个，可以根据自己的需要进行添加。设备发送中断，发送到IO APIC；IO APIC中存在着一个PRT表，每个PRT的表项成为RTE，RTE是每个引脚一个，IOAPIC引脚收到中断消息后，根据RTE得到目标LAPIC，并格式化出一个中断消息发送给LAPIC，同时置位remote irr(level)。
 
+中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。
+
 LAPIC接受到中断消息后，提取其中的VECTOR并设置IRR后，进行中断的选取，取得优先级最高的中断后，清除IRR，设置ISR，提交CPU进行中断处理，CPU处理完中断后，写LAPIC的EOI，通知IOAPIC清除remote irr(level且deassert)。
 
 ## 1.3. MSI
