--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -34,6 +34,8 @@ KVM将**所有类型**的**IRQ CHIP**(**中断芯片**)抽象出**一个接口**
 
 # 2. 虚拟中断子系统的关系
 
+在**KVM架构**下，**每个KVM虚拟机！！！** 维护一个**IO APIC！！！**，但是**每个VCPU！！！** 有**一个local APIC！！！**。
+
 ## 2.1. struct kvm_irq_routing_table: 虚拟机的中断路由表
 
 一个`struct kvm`代表一个虚拟机, 
