--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -8,7 +8,7 @@
   - [1.2. APIC](#12-apic)
   - [1.3. MSI](#13-msi)
   - [1.4. 中断触发方式](#14-中断触发方式)
-  - [1.5. GSI](#15-gsi)
+  - [1.5. IRQ、GSI和中断向量](#15-irq-gsi和中断向量)
 - [2. 中断架构](#2-中断架构)
   - [2.1. 可编程中断控制器](#21-可编程中断控制器)
   - [2.2. PIC](#22-pic)
@@ -59,13 +59,19 @@ LAPIC接受到中断消息后，提取其中的VECTOR并设置IRR后，进行中
 - **level触发**就是一直将**引脚**保持在**高电平**（电平为**1**）直到**中断完成**，现在**PCI/PCIE设备**都是**level触发**；
 - **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的**ISA设备**都是**edge触发**，在**kvm**中通过发送**level = 0**和**level = 1**的两个中断来**模拟一个edge中断**。
 
-## 1.5. GSI
+## 1.5. IRQ、GSI和中断向量
 
 GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
 
 如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
 
 中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
+
+IRQ号是PIC时代引入的概念,由于ISA设备通常是直接连接到到固定的引脚，所以对于IRQ号描述了设备连接到了PIC的哪个引脚上，同IRQ号直接和中断优先级相关,例如IRQ0比IRQ3的中断优先级更高。
+
+GSI号是ACPI引入的概念，全称是Global System Interrupt，用于为系统中每个中断源指定一个唯一的中断编号。注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
+
+中断向量是针对逻辑CPU的概念，用来表示中断在IDT表的索引号，每个IRQ（或者GSI）最后都会被定向到某个Vecotor上。对于PIC上的中断，中断向量 = 32(start vector) + IRQ号。在IOAPIC上的中断被分配的中断向量则是由操作系统分配。
 
 # 2. 中断架构
 
