--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -39,3 +39,17 @@ qemu在kvm内核中创建完成PIC和IOAPIC后将全局变量`kvm_kernel_irqchip
 **中断处理的逻辑**放在**kvm内核模块**中进行实现，但**设备的模拟**呈现还是需要**qemu设备模拟器**来搞定，最后qemu和kvm一起配合完成快速中断处理的流程。
 
 i8259的设备创建流程(pic还是传统的isa设备，中断是边沿触发的，master的i/o port为0x20,0x21 slave的i/o port为0xa0,0xa1)：
+
+```cpp
+machine_run_board_init
+    |--> pc_init1
+        |--> if (kvm_pic_in_kernel())
+            |--> kvm_i8259_init
+                |--> isadev = isa_create(bus, name)
+```
+
+ioapic的设备创建流程:
+
+```cpp
+
+```
