--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -120,9 +120,11 @@ struct kvm_kernel_irq_routing_entry {
 
 GSI是该entry对应的**GSI号**，一般**和IRQ是一样**，
 
-set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
+type表示**该gsi的类型**, 取值可以是` KVM_IRQ_ROUTING_IRQCHIP`, `KVM_IRQ_ROUTING_MSI`等
 
-link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
+set表示该gsi关联的中断触发方法（不同type的GSI会调用不同的set触发函数，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
+
+link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；hlist_node则是中断路由表哈希链表的节点，通过link将同一个gsi对应的中断路由项链接到map对应的gsi上。
 
 **每个该结构体**代表了一个**具体芯片**的`set()`方法的**实现**，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
