--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -433,15 +433,16 @@ int kvm_set_irq_routing(struct kvm *kvm,
         new = kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT);
         if (!new)
                 return -ENOMEM;
-        /* 设置指针 */
+        /* 设置路由表的表项数目 */
         new->nr_rt_entries = nr_rt_entries;
+        // 初始化路由表的每个芯片的每个引脚为GSI号为-1, 不再使用 
         for (i = 0; i < KVM_NR_IRQCHIPS; i++)
                 for (j = 0; j < KVM_IRQCHIP_NUM_PINS; j++)
                         new->chip[i][j] = -1;
-        /*初始化每一项kvm_kernel_irq_routing_entry*/
+        /*初始化每一个路由项*/
         for (i = 0; i < nr; ++i) {
                 r = -ENOMEM;
-                // 
+                // 为每个路由项申请空间
                 e = kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT);
                 if (!e)
                         goto out;
@@ -457,6 +458,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
                                 goto free_entry;
                         break;
                 }
+                // 
                 r = setup_routing_entry(kvm, new, e, ue);
                 if (r)
                         goto free_entry;
