--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -5,7 +5,7 @@
 
 - [1. 虚拟中断子系统逻辑图](#1-虚拟中断子系统逻辑图)
 - [2. 虚拟中断子系统的关系](#2-虚拟中断子系统的关系)
-  - [2.1. struct kvm_irq_routing_table: 虚拟机的中断路由表](#21-struct-kvm_irq_routing_table-虚拟机的中断路由表)
+  - [2.1. kvm_irq_routing_table: 虚拟机的中断路由表](#21-kvm_irq_routing_table-虚拟机的中断路由表)
   - [2.2. kvm_kernel_irq_routing_entry: 中断路由项](#22-kvm_kernel_irq_routing_entry-中断路由项)
   - [2.3. IRQ抽象接口层](#23-irq抽象接口层)
   - [2.4. PIC 芯片结构](#24-pic-芯片结构)
@@ -36,7 +36,7 @@ KVM将**所有类型**的**IRQ CHIP**(**中断芯片**)抽象出**一个接口**
 
 在**KVM架构**下，**每个KVM虚拟机！！！** 维护一个**IO APIC！！！**，但是**每个VCPU！！！** 有**一个local APIC！！！**。
 
-## 2.1. struct kvm_irq_routing_table: 虚拟机的中断路由表
+## 2.1. kvm_irq_routing_table: 虚拟机的中断路由表
 
 一个`struct kvm`代表一个虚拟机, 
 `irq_routing`是这个**虚拟机所有IRQ CHIP抽象接口**的**表**(汇总)。即表示该**虚拟机的整个中断路由信息表**.
