--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -503,13 +503,13 @@ out:
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 - `kvm_irq_routing_table`**结构**、
 - `nr_rt_entries`个`hlist_head`
-- 和**nr个**`kvm_kernel_irq_routing_entry`
+- **nr个**`kvm_kernel_irq_routing_entry`
 
 所以`kvm_irq_routing_table`的**大小**是和**全局数组的大小**一样的。整个结构如下图所示
 
 ![2020-05-03-13-18-31.png](./images/2020-05-03-13-18-31.png)
 
-根据上图就可以理解`new->rt_entries = (void *)&new->map[nr_rt_entries];`这行代码的含义，接下来是对没项的table的chip数组做初始化，这里初始化为-1. 接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
+根据上图就可以理解`new->rt_entries = (void *)&new->map[nr_rt_entries];`这行代码的含义，接下来是对每项的table的chip数组做初始化，这里初始化为-1. 接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
 
 ```cpp
 static int setup_routing_entry(struct kvm *kvm,
@@ -533,6 +533,7 @@ static int setup_routing_entry(struct kvm *kvm,
 
         e->gsi = gsi;
         e->type = ue->type;
+        // 设置该路由项的set方法
         r = kvm_set_routing_entry(kvm, e, ue);
         if (r)
                 return r;
