--- Auto-Git Commit ---

--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -101,6 +101,8 @@ struct kvm_irq_routing {
 
 中断路由表：
 kvm_irq_routing_table这个数据结构描述了“每个虚拟机的中断路由表”，对应于kvm数据结构的irq_routing成员。chip是个二维数组表示三个中断控制器芯片的每一个管脚（最多24个pin）的GSI，nr_rt_entries表示中断路由表中存放的“中断路由项”的数目，最为关键的struct hlist_head map[0]是一个哈希链表结构体数组，数组以GSI作为索引可以找到同一个irq关联的所有kvm_kernel_irq_routing_entry（中断路由项）。
+
+```cpp
 struct kvm_irq_routing_table {
     int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
     u32 nr_rt_entries;
@@ -110,8 +112,13 @@ struct kvm_irq_routing_table {
         */
     struct hlist_head map[0];  /* 哈希表数组 */
 };
+```
+
 中断路由项：
+
 gsi表示这个中断路由项对应的GSI号，type表示该gsi的类型取值可以是 KVM_IRQ_ROUTING_IRQCHIP, KVM_IRQ_ROUTING_MSI等，set函数指针很重要表示该gsi关联的中断触发方法（不同type的GSI会调用不同的set触发函数），hlist_node则是中断路由表哈希链表的节点，通过link将同一个gsi对应的中断路由项链接到map对应的gsi上。
+
+```cpp
 struct kvm_kernel_irq_routing_entry {
     u32 gsi;
     u32 type;
@@ -136,7 +143,11 @@ struct kvm_kernel_irq_routing_entry {
     };
     struct hlist_node link;
 };
+```
+
 中断路由表的设置在qemu中初始化时，通过调用kvm_pc_setup_irq_routing函数来完成。
+
+```cpp
     void kvm_pc_setup_irq_routing(bool pci_enabled)
     {
         KVMState *s = kvm_state;
@@ -164,7 +175,7 @@ struct kvm_kernel_irq_routing_entry {
             kvm_irqchip_commit_routes(s);
         }
     }
-
+```
 
 # 参考
 
