--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -106,8 +106,12 @@ PIC有三个重要的寄存器:
 
 **i8259控制器**和**IOAPIC**的创建和初始化由**qemu和kvm配合完成**，包括了2个方面：
 
-- **kvm**中**设备相关数据结构初始化**
-- **qemu中设备模拟的初始化**
+- **kvm**中**设备相关数据结构初始化！！！**
+- **qemu中设备模拟的初始化！！！**
+
+**中断处理的逻辑**放在**kvm内核模块**中进行实现，但**设备的模拟**呈现还是需要**qemu设备模拟器**来搞定，最后qemu和kvm一起配合完成快速中断处理的流程。
+
+所以在**qemu**中也会创建i8259A和ioapic
 
 ## 6.1. QEMU
 
