--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -177,6 +177,8 @@ struct kvm_pic {
 
 Kvm_pic结构体就是虚拟PIC的实现dev_master、dev_slave、dev_eclr实现了虚拟PIC设备的PIO地址空间，并注册在KVM内核的PIO总线上，以便完成设备的IO操作，这个我会在后面的博文中对大家介绍，ECLR就是控制中断触发方式的寄存器; pics执行一个数组，每个元素指向kvm_kpic_state结构体，kvm_kpic_state结构体芯片的所有寄存器和状态，包括IRR，ISR，IMR等
 
+PIC由**2个i8259**进行“级联”，一个为master一个为slave，**每个i8259**有**8个PIN**（**salve**的**INT输出线**连接到**master**的**IRQ2引脚**上,所以实际可用的**IRQ数目为15**）。
+
 ## 2.5. IOAPIC芯片结构
 
 ![2020-05-03-19-03-18.png](./images/2020-05-03-19-03-18.png)
@@ -187,7 +189,7 @@ kvm_ioapic结构体就是虚拟IOAPIC。irr成员就是IRR寄存器。`redirtbl[
 
 `kvm_ioapic_redirect_entry`结构体就是一个RTE，fields成员执行了RTE中的各个域，如`dest_id`和`dest_mode`用来确定目标CPU，vector用来确定中断向量号，`remote_irr`在level触发时候保证中断共享情况下可以处理到所有设备的中断请求。Fields和`kvm_kernel_irq_routing_entry`的gsi配合起来确定了一个完整的中断信息内容
 
-目前kvm只为虚拟机创建一个ioapic设备（现在多路服务器可能有多个ioapic设备），ioapic设备提供24个PIN给外部中断使用。在IRQ路由上 0-15号GSI为PIC和IOAPIC共用的，16-23号GSI则都分配给ioapic。
+目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。在IRQ路由上 `0-15` 号GSI为**PIC和IOAPIC共用的**，`16-23`号GSI则都**分配给ioapic**。
 
 ## 2.6. LAPIC芯片结构体
 
