--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -59,7 +59,7 @@ machine_run_board_init
                     |--> dev = qdev_create(NULL, "kvm-ioapic")
 ```
 
-PIC由2个i8259进行“级联”，一个为master一个为slave，每个i8259有8个PIN（salve的INT输出线连接到master的IRQ2引脚上,所以实际可用的IRQ数目为15）。目前kvm只为虚拟机创建一个ioapic设备（现在多路服务器可能有多个ioapic设备），ioapic设备提供24个PIN给外部中断使用。在IRQ路由上 `0-15` 号GSI为**PIC和IOAPIC共用的**，`16-23`号GSI则都**分配给ioapic**。
+PIC由**2个i8259**进行“级联”，一个为master一个为slave，**每个i8259**有**8个PIN**（**salve**的**INT输出线**连接到**master**的**IRQ2引脚**上,所以实际可用的**IRQ数目为15**）。目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。在IRQ路由上 `0-15` 号GSI为**PIC和IOAPIC共用的**，`16-23`号GSI则都**分配给ioapic**。
 
 几个概念要理清楚：IRQ号，中断向量和GSI。
 
