--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -189,7 +189,9 @@ kvm_ioapic结构体就是虚拟IOAPIC。irr成员就是IRR寄存器。`redirtbl[
 
 `kvm_ioapic_redirect_entry`结构体就是一个RTE，fields成员执行了RTE中的各个域，如`dest_id`和`dest_mode`用来确定目标CPU，vector用来确定中断向量号，`remote_irr`在level触发时候保证中断共享情况下可以处理到所有设备的中断请求。Fields和`kvm_kernel_irq_routing_entry`的gsi配合起来确定了一个完整的中断信息内容
 
-目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。在IRQ路由上 `0-15` 号GSI为**PIC和IOAPIC共用的**，`16-23`号GSI则都**分配给ioapic**。
+目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。
+
+在**IRQ路由**上 `0-15` 号GSI为**PIC和IOAPIC共用的**，`16-23`号GSI则都**分配给ioapic**。
 
 ## 2.6. LAPIC芯片结构体
 
