--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -3,79 +3,38 @@
 
 <!-- code_chunk_output -->
 
-- [1. 硬件基础](#1-硬件基础)
-  - [1.1. PIC: 8259A](#11-pic-8259a)
-  - [1.2. APIC](#12-apic)
-  - [1.3. MSI](#13-msi)
-  - [1.4. 中断触发方式](#14-中断触发方式)
-  - [1.5. IRQ、GSI和中断向量](#15-irq-gsi和中断向量)
-- [2. 中断架构](#2-中断架构)
-  - [2.1. 可编程中断控制器](#21-可编程中断控制器)
-  - [2.2. PIC](#22-pic)
-  - [2.3. APIC](#23-apic)
-  - [2.4. 处理器间中断](#24-处理器间中断)
-  - [2.5. 中断的重要概念](#25-中断的重要概念)
-    - [2.5.1. 中断的分类](#251-中断的分类)
-    - [2.5.2. 中断的优先级](#252-中断的优先级)
-    - [2.5.3. 中断的屏蔽](#253-中断的屏蔽)
-    - [2.5.4. IDT表](#254-idt表)
-    - [2.5.5. 中断门](#255-中断门)
-- [3. 异常架构](#3-异常架构)
-- [4. 中断与异常总结](#4-中断与异常总结)
-- [5. 操作系统对中断/异常的处理流程](#5-操作系统对中断异常的处理流程)
+- [1. 中断架构](#1-中断架构)
+  - [1.2. PIC](#12-pic)
+  - [1.3. APIC](#13-apic)
+  - [1.4. 处理器间中断](#14-处理器间中断)
+  - [1.5. MSI](#15-msi)
+  - [1.6. 中断的重要概念](#16-中断的重要概念)
+    - [1.6.1. 中断的分类](#161-中断的分类)
+    - [1.6.2. 中断触发方式](#162-中断触发方式)
+    - [1.6.3. IRQ、GSI和中断向量](#163-irq-gsi和中断向量)
+    - [1.6.4. 中断的优先级](#164-中断的优先级)
+    - [1.6.5. 中断的屏蔽](#165-中断的屏蔽)
+    - [1.6.6. IDT表](#166-idt表)
+    - [1.6.7. 中断门](#167-中断门)
+- [2. 异常架构](#2-异常架构)
+- [3. 中断与异常总结](#3-中断与异常总结)
+- [4. 操作系统对中断/异常的处理流程](#4-操作系统对中断异常的处理流程)
 
 <!-- /code_chunk_output -->
 
-# 1. 硬件基础
-
-简单介绍点硬件知识，方便后面的讲解
-
-## 1.1. PIC: 8259A
-
-
-
-## 1.2. APIC
-
-
-
-## 1.3. MSI
-
-后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段**Address**标明了**中断目标地址**，然后**设备直接发送中断给LAPIC**提交CPU，这种方式下，直接**绕过了IOAPIC**，效率更高。
-
-## 1.4. 中断触发方式
-
-这里需要额外说明一下，中断的触发方式分为level触发和edge触发；
-
-- **level触发**就是一直将**引脚**保持在**高电平**（电平为**1**）直到**中断完成**，现在**PCI/PCIE设备**都是**level触发**；
-- **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的**ISA设备**都是**edge触发**，在**kvm**中通过发送**level = 0**和**level = 1**的两个中断来**模拟一个edge中断**。
-
-## 1.5. IRQ、GSI和中断向量
-
-GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
-
-如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
-
-中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
-
-IRQ号是PIC时代引入的概念,由于ISA设备通常是直接连接到到固定的引脚，所以对于IRQ号描述了设备连接到了PIC的哪个引脚上，同IRQ号直接和中断优先级相关,例如IRQ0比IRQ3的中断优先级更高。
-
-GSI号是ACPI引入的概念，全称是Global System Interrupt，用于为系统中每个中断源指定一个唯一的中断编号。注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
-
-中断向量是针对逻辑CPU的概念，用来表示中断在IDT表的索引号，每个IRQ（或者GSI）最后都会被定向到某个Vecotor上。对于PIC上的中断，中断向量 = 32(start vector) + IRQ号。在IOAPIC上的中断被分配的中断向量则是由操作系统分配。
-
-# 2. 中断架构
+# 1. 中断架构
 
 从某种意义上, **现代计算机架构**是由**大量的中断事件驱动(！！！**)的. **中断**提供给**外部硬件设备**一种"**打断CPU当前执行任务, 并响应自身服务！！！**"的手段.
 
-## 2.1. 可编程中断控制器
+**中断**从设备发送到CPU需要由被称为"**中断控制器！！！** "的部件**转发**(MSI除外). 中断控制器发展至今, 经历了**PIC**(Programmable Interrupt Controller, 可编程中断控制器)和**APIC**(Advanced Programmable Interrupt Controller, 高级可编程中断控制器)两个阶段.
 
-**中断**从设备发送到CPU需要由被称为"**中断控制器**"的部件**转发**(MSI除外). 中断控制器发展至今, 经历了PIC(Programmable Interrupt Controller, 可编程中断控制器)和APIC(Advanced Programmable Interrupt Controller, 高级可编程中断控制器)两个阶段.
-
-## 2.2. PIC
+## 1.2. PIC
 
 ![2019-07-09-13-53-59.png](./images/2019-07-09-13-53-59.png)
 
-最老的中断控制芯片就是**8259A**了，也就是PIC芯片，该种芯片8个引脚，为了扩展引脚数目，引入了主从两块芯片，利用一个引脚连接**主从两个芯片**，这样就一共有**15个引脚**了。
+最老的中断控制芯片就是**8259A**了，也就是PIC芯片.
+
+PIC由**2个i8259**进行“级联”，一个为master一个为slave，**每个i8259**有**8个PIN**（**salve**的**INT输出线**连接到**master**的**IRQ2引脚**上,所以实际可用的**IRQ数目为15**）。
 
 **IRQ = 起始base号 + pin**。**接收到设备中断**后，通过**拉高引脚**通知**CPU**，CPU收到中断发送**两个INT ACK**到**INTA**，第二个INTA期间，PIC向CPU提交中断vector。
 
@@ -123,7 +82,7 @@ PIC处理中断流程
 
 ⑧ **中断完成**后，在**AEOI（Automatic End of Interrupt）模式**里，8259在**第2个INTA\#结束后**自动**清ISR相应的位**。否则必须发送一个**EOI命令给8259**。
 
-## 2.3. APIC
+## 1.3. APIC
 
 PIC可以在UP(单处理器)平台上工作, 但无法用于MP(多处理器)平台. 因此, APIC应运而生.
 
@@ -162,15 +121,19 @@ APIC系统中, 中断的发起大致流程如下.
 
 ⓻ CPU处理完中断, 软件写EOI寄存器告知中断处理完成, 对于level触发的中断, IRR中对应位清0. LAPIC可提交下一个中断.
 
-## 2.4. 处理器间中断
+## 1.4. 处理器间中断
 
 在MP(多处理器)平台上, 多个CPU要协同工作, 处理器间中断(Inter\-processor Interrupt, IPI)提供CPU之间相互通信的手段. CPU可以通过LAPIC的ICR(Interrupt Command Register, 中断命令寄存器)向指定的一个/多个CPU发送中断.
 
 操作系统通常使用IPI来完成诸如**进程转移**、**中断平衡**和**TLB刷新**等工作.
 
-## 2.5. 中断的重要概念
+## 1.5. MSI
 
-### 2.5.1. 中断的分类
+后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段**Address**标明了**中断目标地址**，然后**设备直接发送中断给LAPIC**提交CPU，这种方式下，直接**绕过了IOAPIC**，效率更高。
+
+## 1.6. 中断的重要概念
+
+### 1.6.1. 中断的分类
 
 中断可以从很多方面分类, 从中断源角度看, 可以分为如下几类.
 
@@ -186,7 +149,28 @@ APIC系统中, 中断的发起大致流程如下.
 
 ⓶ level触发中断: 指中断以电平方式触发, 在中断程序应答设备前, 该电平一直有效. PCI设备使用这种触发方式.
 
-### 2.5.2. 中断的优先级
+### 1.6.2. 中断触发方式
+
+这里需要额外说明一下，中断的触发方式分为level触发和edge触发；
+
+- **level触发**就是一直将**引脚**保持在**高电平**（电平为**1**）直到**中断完成**，现在**PCI/PCIE设备**都是**level触发**；
+- **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的**ISA设备**都是**edge触发**，在**kvm**中通过发送**level = 0**和**level = 1**的两个中断来**模拟一个edge中断**。
+
+### 1.6.3. IRQ、GSI和中断向量
+
+GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
+
+如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
+
+中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
+
+IRQ号是PIC时代引入的概念,由于ISA设备通常是直接连接到到固定的引脚，所以对于IRQ号描述了设备连接到了PIC的哪个引脚上，同IRQ号直接和中断优先级相关,例如IRQ0比IRQ3的中断优先级更高。
+
+GSI号是ACPI引入的概念，全称是Global System Interrupt，用于为系统中每个中断源指定一个唯一的中断编号。注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
+
+中断向量是针对逻辑CPU的概念，用来表示中断在IDT表的索引号，每个IRQ（或者GSI）最后都会被定向到某个Vecotor上。对于PIC上的中断，中断向量 = 32(start vector) + IRQ号。在IOAPIC上的中断被分配的中断向量则是由操作系统分配。
+
+### 1.6.4. 中断的优先级
 
 在使用**PIC**的系统中, PIC的**管脚**决定了**中断的优先级**, 连接**IR0**的设备具有**最高优先级**, 连接**IR7**的设备**优先级最低**. 
 
@@ -200,7 +184,7 @@ APIC系统中, 中断的发起大致流程如下.
 
 这里, GSI和IRQ可以看作等同的概念, 表示**某个设备的中断号**. 它们与**vector的关系**由操作系统决定, 通常是在**设备驱动注册中断处理程序**时由**操作系统分配**.
 
-### 2.5.3. 中断的屏蔽
+### 1.6.5. 中断的屏蔽
 
 无论是在PIC收到中断信号后, 还是**LAPIC！！！收到中断消息**后, 并不一定都是马上交给CPU处理的, 这还要取决于**CPU当前是否屏蔽中断**(不可屏蔽中断除外). 
 
@@ -216,13 +200,13 @@ APIC系统中, 中断的发起大致流程如下.
 
 - IOAPIC可通过**RTE中的mask位**屏蔽对应管脚. 该方法不会讲中断依附(pengding)到IRR, 而是直接忽略, 对于edge触发中断可能导致中断丢失.
 
-### 2.5.4. IDT表
+### 1.6.6. IDT表
 
 IDT实际上就是个大数组, 用于存放各种"门"(中断门、陷阱门、任务门). 这些门是中断和异常通往各自处理函数的入口. 当一个中断或异常发生, CPU用它们对应的vector号索引IDT表以获得对应的"门". 
 
 **IDT表**的**基地址**存放在**IDTR寄存器**中，该寄存器与GDTR类似，由一个**基地址**字段（Base）和**长度**字段（Limit）构成。
 
-### 2.5.5. 中断门
+### 1.6.7. 中断门
 
 "门"是入口, 中断门就是中断的入口. 中断门实际上是一种段描述符, 称为**系统描述符**, 由**段描述符的S位控制**. 格式如图.
 
@@ -232,7 +216,7 @@ IDT实际上就是个大数组, 用于存放各种"门"(中断门、陷阱门、
 
 通常**操作系统的中断都用了中断门**, 没有使用陷阱门. 中断门和陷阱门唯一区别在于程序通过中断门跳转后, EFLAGS寄存器的IF位自动清0, 中断关闭. 而陷阱门没有.
 
-# 3. 异常架构
+# 2. 异常架构
 
 和中断相比, 异常最大的不同在于它是在程序的执行过程中同步发生的. 例如下面
 
@@ -258,11 +242,11 @@ void main()
 
 ![](./images/2019-07-01-16-22-26.png)
 
-# 4. 中断与异常总结
+# 3. 中断与异常总结
 
 ![](./images/2019-07-01-16-22-04.png)
 
-# 5. 操作系统对中断/异常的处理流程
+# 4. 操作系统对中断/异常的处理流程
 
 各个操作系统对于中断/异常处理实现不同, 但基本流程如下.
 
