--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -163,8 +163,11 @@ struct kvm_io_device {
 
 struct kvm_kpic_state {
         u8 last_irr;    /* edge detection */
+        // irr寄存器
         u8 irr;         /* interrupt request register */
+        // imr寄存器
         u8 imr;         /* interrupt mask register */
+        // isr寄存器
         u8 isr;         /* interrupt service register */
         u8 priority_add;        /* highest irq priority */
         u8 irq_base;
@@ -201,15 +204,63 @@ PIC是**一个KVM虚拟机对应一个**，由`kvm.arch.vpic`成员指向
 
 `kvm_pic`结构体就是虚拟PIC的实现, `dev_master`、`dev_slave`、`dev_eclr`实现了**虚拟PIC设备**的**PIO地址空间**，并**注册**在**KVM内核的PIO总线**上，以便**完成设备的IO操作**，**ECLR**就是**控制中断触发方式的寄存器**; 
 
-pics执行一个数组，每个元素指向kvm_kpic_state结构体，kvm_kpic_state结构体芯片的所有寄存器和状态，包括IRR，ISR，IMR等.
+pics执行一个数组，每个元素指向`kvm_kpic_state`结构体，`kvm_kpic_state`结构体**芯片**的**所有寄存器和状态**，包括**IRR**，**ISR**，**IMR**等.
 
 ## 2.5. IOAPIC芯片结构
 
 ![2020-05-03-19-03-18.png](./images/2020-05-03-19-03-18.png)
 
-IOAPIC在KVM实现中只有一个，由kvm.arch.vioapic指向kvm_ioapic结构体。
+```cpp
+// arch/x86/kvm/ioapic.h
+struct rtc_status {
+        int pending_eoi;
+        struct dest_map dest_map;
+};
 
-kvm_ioapic结构体就是虚拟IOAPIC。irr成员就是IRR寄存器。`redirtbl[IOAPIC_NUM_PINS]`是一个数组，构成PRT表，每个成员对一个IOAPIC的引脚，执行kvm_ioapic_redirect_entry结构体。
+union kvm_ioapic_redirect_entry {
+        u64 bits;
+        struct {
+                u8 vector;
+                u8 delivery_mode:3;
+                u8 dest_mode:1;
+                u8 delivery_status:1;
+                u8 polarity:1;
+                u8 remote_irr:1;
+                u8 trig_mode:1;
+                u8 mask:1;
+                u8 reserve:7;
+                u8 reserved[4];
+                u8 dest_id;
+        } fields;
+};
+
+struct kvm_ioapic {
+        u64 base_address;
+        u32 ioregsel;
+        u32 id;
+        // irr寄存器
+        u32 irr;
+        u32 pad;
+        union kvm_ioapic_redirect_entry redirtbl[IOAPIC_NUM_PINS];
+        unsigned long irq_states[IOAPIC_NUM_PINS];
+        struct kvm_io_device dev;
+        struct kvm *kvm;
+        void (*ack_notifier)(void *opaque, int irq);
+        spinlock_t lock;
+        struct rtc_status rtc_status;
+        struct delayed_work eoi_inject;
+        u32 irq_eoi[IOAPIC_NUM_PINS];
+        u32 irr_delivered;
+};
+```
+
+IO APIC可以一个系统里面有多个，但是在KVM实现中只有一个，由`kvm.arch.vioapic`指向`kvm_ioapic`结构体。
+
+kvm_ioapic结构体就是**虚拟IOAPIC**。
+
+irr成员就是IRR寄存器。
+
+`redirtbl[IOAPIC_NUM_PINS]`是一个数组，构成**PRT表**，每个成员对一个IOAPIC的引脚，执行kvm_ioapic_redirect_entry结构体。
 
 `kvm_ioapic_redirect_entry`结构体就是一个RTE，fields成员执行了RTE中的各个域，如`dest_id`和`dest_mode`用来确定目标CPU，vector用来确定中断向量号，`remote_irr`在level触发时候保证中断共享情况下可以处理到所有设备的中断请求。Fields和`kvm_kernel_irq_routing_entry`的gsi配合起来确定了一个完整的中断信息内容
 
