--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -254,15 +254,18 @@ struct kvm_ioapic {
 };
 ```
 
-IO APIC可以一个系统里面有多个，但是在KVM实现中只有一个，由`kvm.arch.vioapic`指向`kvm_ioapic`结构体。
+IO APIC可以一个系统里面有多个，但是在KVM实现中只有一个，由`kvm.arch.vioapic`指向`kvm_ioapic`结构体。**设备发送中断**，发送到·；IO APIC中存在着**一个PRT表**，每个PRT的表项成为**RTE**，RTE是每个引脚一个，IOAPIC引脚收到中断消息后，根据RTE得到目标LAPIC，并格式化出一个**中断消息**发送给**LAPIC**，同时置位remote irr(level)。
 
 kvm_ioapic结构体就是**虚拟IOAPIC**。
 
 irr成员就是IRR寄存器。
 
-`redirtbl[IOAPIC_NUM_PINS]`是一个数组，构成**PRT表**，每个成员对一个IOAPIC的引脚，执行kvm_ioapic_redirect_entry结构体。
+`redirtbl[IOAPIC_NUM_PINS]`是一个数组，构成**PRT表**，**每个成员**对一个**IOAPIC的引脚**，执行`kvm_ioapic_redirect_entry`结构体。
 
-`kvm_ioapic_redirect_entry`结构体就是一个RTE，fields成员执行了RTE中的各个域，如`dest_id`和`dest_mode`用来确定目标CPU，vector用来确定中断向量号，`remote_irr`在level触发时候保证中断共享情况下可以处理到所有设备的中断请求。Fields和`kvm_kernel_irq_routing_entry`的gsi配合起来确定了一个完整的中断信息内容
+`kvm_ioapic_redirect_entry`结构体就是一个**RTE**，fields成员执行了**RTE中的各个域**，如
+- `dest_id`和`dest_mode`用来**确定目标CPU**，
+- `vector`用来确定中断向量号，
+- `remote_irr`在**level触发**时候保证**中断共享**情况下可以处理到**所有设备的中断请求**。Fields和`kvm_kernel_irq_routing_entry`的**gsi**配合起来**确定了一个完整的中断信息内容！！！**
 
 目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。
 
