--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
@@ -17,13 +17,13 @@
 
 在Intel处理器上，**branch record**可以**记录在下面的三个地方**。
 
-① **LBR stack**：即**Last Branch Record栈**，这个stack**由数对MSR寄存器组成**。
+① **LBR stack**：即**Last Branch Record栈**，这个stack**由几对MSR寄存器！！！组成**。
 
 ② **System bus**：处理器可以将**Branch Trace Message（BTM**）发送到**system bus上**，由监控**system bus**的**debugger device**来读取system bus上的**BTM记录**。
 
 ③ **BTS（Branch Trace Store**）：处理器可以将**BTM记录**存储在**内存Debug Store（DS）区域**中其中一部分的BTS区域。
 
-处理器并**不能同时存放在上面的三个地方(！！！**)中，对于**不同的微架构**处理器可以**有限度**地支持**同时存放在LBR stack和BTS区域(！！！**)里。
+处理器并**不能同时存放在上面的三个地方(！！！**)中，对于**不同的微架构**处理器可以**有限度**地支持**同时！！！存放在LBR stack和BTS区域(！！！**)里。
 
 # 2. 记录的形式
 
@@ -31,7 +31,7 @@ branch record记录着**branch record的trace（轨迹**），包括：**from（
 
 处理器以下面的形式记录。
 
-① 在**LBR stack**中使用**处理器**提供的**数对from/to寄存器**：**MSR\_LASTBRANCH\_n\_FROM\_IP**和**MSR\_LASTBRANCH\_n\_TO\_IP**，这些寄存器是**MSR寄存器中的一部分**。
+① 在**LBR stack**中使用**处理器**提供的**数对from/to寄存器**：`MSR\_LASTBRANCH\_n\_FROM\_IP`和`MSR\_LASTBRANCH\_n\_TO\_IP`，这些寄存器是**MSR寄存器中的一部分**。
 
 ② 以**BTM（Branch Trace Message**）形式：实际上和上面的from/to寄存器是一样的，区别是可以**存储在内存中(！！！**)或者**发送到system bus**上。
 
