--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/0. 概述.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/0. 概述.md
@@ -2,9 +2,11 @@ Intel的处理器有能力去记录**执行流**中**最近发生过的分支线
 
 >在这一章里是围绕着Intel的处理器进行探讨，这些内容并不适合于AMD的处理器，敬请留意。
 
-**分支记录功能**将记录处理器的**last branch**、**last interrupt**，以及**last exception**轨迹，这些功能由大量的MSR寄存器或者内存buffer来支持，而MSR寄存器是与处理器family和model紧密相关的。由于Intel的处理器有众多的micro-architecture（微架构），不同的micro architecture将支持不同的功能，有不同的硬件资源。
+**分支记录功能**将记录处理器的**last branch**、**last interrupt**，以及**last exception**轨迹，这些功能由大量的MSR寄存器或者内存buffer来支持，而**MSR寄存器**是与**处理器family**和**model**紧密相关的。
 
-注意：这里last并不是最后的意思，是指最近。因此，处理器将记录最近所发生过的branch、interrupt，以及exception轨迹，可是这个记录会受到一些抑制，在后续小节中我们将会探讨。
+由于Intel的处理器有众多的micro-architecture（微架构），不同的micro architecture将支持不同的功能，有不同的硬件资源。
+
+注意：这里last并不是最后的意思，是指**最近**。因此，处理器将记录**最近所发生**过的branch、interrupt，以及exception轨迹，可是这个记录会受到一些抑制，在后续小节中我们将会探讨。
 
 下面是在Intel64手册里为分支记录功能列出来的相关的micro-architecture，包括：
 
