--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/2. 初识Branch Record.md
@@ -39,4 +39,6 @@ branch record记录着**branch record的trace（轨迹**），包括：**from（
 
 # 3. 何时进行记录
 
-当处理器支持**last branch记录功能**时，可以在**IA32\_DEBUG寄存器**中相关的控制位来**开启分支记录功能**。一旦开启**立即生效**，处理器将对接下来发生的**branch**、**Interrupt**及**Exception**记录在上面所提及的**地方**，即**LBR stack**、**system bus**或者**内存中的BTS buffer**区域。
+当处理器支持**last branch记录功能**时，可以在**IA32\_DEBUG寄存器**中相关的控制位来**开启分支记录功能**。
+
+一旦开启**立即生效**，处理器将对接下来发生的**branch！！！**、**Interrupt！！！** 及**Exception！！！** 记录在上面所提及的**地方**，即**LBR stack**、**system bus**或者**内存中的BTS buffer**区域。
