--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
@@ -62,7 +62,10 @@
 
 # 2. APIC ID在multi-threading处理器下
 
-Intel的处理器实现了两种技术：从后期的Pentium4 处理器开始加入的**Hyper-Threading（超线程**）技术和从Core duo处理器开始加入的**multi-core（多处理器核心**）技术。
+Intel的处理器实现了两种技术：
+
+- 从后期的**Pentium4** 处理器开始加入的**Hyper-Threading（超线程**）技术
+- 从Core duo处理器开始加入的**multi-core（多处理器核心**）技术。
 
 - **Hyper\-Threading**使用**逻辑core**技术，**两个logical processor**共用一个**physical package（物理处理器**）。
 
@@ -74,7 +77,7 @@ Intel的处理器实现了两种技术：从后期的Pentium4 处理器开始加
 
 ## 2.1. 检测处理器是否支持multi-threading
 
-对于处理器是否支持**multi\-threading**技术，软件可以使用**CPUID.01：EDX[28]位**进行检测，为1时表示支持，如以下代码所示。
+对于处理器是否支持**multi\-threading**技术，软件可以使用`CPUID.01：EDX[28]`位进行检测，为1时表示支持，如以下代码所示。
 
 代码清单18-9（lib\cpuid.asm）：
 
