--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
@@ -64,14 +64,13 @@
 
 Intel的处理器实现了两种技术：
 
-- 从后期的**Pentium4** 处理器开始加入的**Hyper-Threading（超线程**）技术
-- 从Core duo处理器开始加入的**multi-core（多处理器核心**）技术。
+- 从后期的**Pentium 4** 处理器开始加入的**Hyper-Threading（超线程**）技术, 使用**逻辑core**技术，**两个logical processor**共用一个**physical package（物理处理器**）。
+- 从**Core duo**处理器开始加入的**multi-core（多处理器核心**）技术, 使用的是**物理core技术**，一个**physical package**上有**两个物理core单元**。
 
-- **Hyper\-Threading**使用**逻辑core**技术，**两个logical processor**共用一个**physical package（物理处理器**）。
+**multi\-threading**技术**不单指Hyper-Threading（超线程**），也包括了**multi\-core（多处理器核心**）技术。
 
-- **multi-core**使用的是**物理core技术**，一个**physical package**上有**两个物理core单元**。
-
-**multi\-threading**技术**不单指Hyper-Threading（超线程**），也包括了**multi\-core（多处理器核心**）技术。现在**Intel**的处理器上的**multi\-threading**实现了**Hyper\-Threading**与**multi-core相结合**。而**AMD**的**multi\-threading**技术以**multi\-core**形式实现。
+- 现在**Intel**的处理器上的**multi\-threading**实现了**Hyper\-Threading**与**multi-core相结合**。
+- 而**AMD**的**multi\-threading**技术以**multi\-core**形式实现。
 
 两种技术都有的话, 在**有cluster的MP系统**中, 会有**多个cluster**, **每个cluster**会有多个**physical package(物理处理器**), **一个physical package**会有**多个物理processor core单元(2个, multi-core技术**), **每个物理core单元**内有**多个logical processor(逻辑, Hyper\-Threading技术, 2个**), logical processor就是指**SMT单元**, 用来**执行单元的线程**, 拥有自己的**资源(处理器的stat信息**)和**自己的local APIC**等.
 
