--- Auto-Git Commit ---

--- a/Linux/MCE/memory/流程分析.md
+++ b/Linux/MCE/memory/流程分析.md
@@ -9,13 +9,16 @@ static int __init memory_failure_init(void)
         int cpu;
 
         for_each_possible_cpu(cpu) {
+                // per CPU变量
                 mf_cpu = &per_cpu(memory_failure_cpu, cpu);
                 spin_lock_init(&mf_cpu->lock);
                 INIT_KFIFO(mf_cpu->fifo);
+                // 初始化work
                 INIT_WORK(&mf_cpu->work, memory_failure_work_func);
         }
 
         return 0;
 }
 ```
+
 
