--- a/Linux/MCE/memory/流程分析.md
+++ b/Linux/MCE/memory/流程分析.md
@@ -13,11 +13,38 @@ static int __init memory_failure_init(void)
                 mf_cpu = &per_cpu(memory_failure_cpu, cpu);
                 spin_lock_init(&mf_cpu->lock);
                 INIT_KFIFO(mf_cpu->fifo);
-                // 初始化work
+                // 初始化work, 执行函数是memory_failure_work_func
                 INIT_WORK(&mf_cpu->work, memory_failure_work_func);
         }
 
         return 0;
+}
+```
+
+接下来直接看`memory_failure_work_func`, 
+
+```cpp
+static void memory_failure_work_func(struct work_struct *work)
+{
+        struct memory_failure_cpu *mf_cpu;
+        struct memory_failure_entry entry = { 0, };
+        unsigned long proc_flags;
+        int gotten;
+        // 得到当前cpu的变量
+        mf_cpu = this_cpu_ptr(&memory_failure_cpu);
+        for (;;) {
+                spin_lock_irqsave(&mf_cpu->lock, proc_flags);
+                gotten = kfifo_get(&mf_cpu->fifo, &entry);
+                spin_unlock_irqrestore(&mf_cpu->lock, proc_flags);
+                if (!gotten)
+                        break;
+                if (entry.flags & MF_SOFT_OFFLINE)
+                        // 
+                        soft_offline_page(entry.pfn, entry.flags);
+                else
+                        // 执行
+                        memory_failure(entry.pfn, entry.flags);
+        }
 }
 ```
 
