--- Auto-Git Commit ---

--- a/Linux/MCE/memory/流程分析.md
+++ b/Linux/MCE/memory/流程分析.md
@@ -12,6 +12,7 @@ static int __init memory_failure_init(void)
                 // per CPU变量
                 mf_cpu = &per_cpu(memory_failure_cpu, cpu);
                 spin_lock_init(&mf_cpu->lock);
+                // 初始化fifo
                 INIT_KFIFO(mf_cpu->fifo);
                 // 初始化work, 执行函数是memory_failure_work_func
                 INIT_WORK(&mf_cpu->work, memory_failure_work_func);
