--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -453,6 +453,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
 
                 r = -EINVAL;
                 switch (ue->type) {
+                // MSI类型的中断
                 case KVM_IRQ_ROUTING_MSI:
                         if (ue->flags & ~KVM_MSI_VALID_DEVID)
                                 goto free_entry;
@@ -502,7 +503,7 @@ out:
 #define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 ```
 
-这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**.
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**; 
 
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 - `kvm_irq_routing_table`**结构**、
