--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -277,7 +277,35 @@ irr成员就是IRR寄存器。
 
 LAPIC是每个VCPU一个，由`kvm.vcpus[i].arch.apic`指向`kvm_lapic`结构体。
 
-kvm_lapic结构体代表一个虚拟LAPIC。base_address为LAPIC的基地址，这是一个GPA，是GUEST设置的LAPIC的基地址，在GUEST写某个LAPIC寄存器的时候，会带入该寄存器的GPA',然后GPA'减去base_address可以算出寄存器对于基地址的偏移量，然后到regs成员中真正的找到虚拟寄存器加以修改，请参见apic_mmio_read，apic_mmio_write；dev成员将lapic在KVM内核空间的KVM MMIO BUS总线上注册了IO地址空间，通过对IO地址空间的操作完成对LAPIC的操作。regs成员指向一个页面，这是一个HVA，指向一个HOST的页面，这个页面总记录了LAPIC是所有虚拟寄存，IRR，ISR，LVT等等，通过偏移量就可以得到某个虚拟寄存器的HVA，完成对该虚拟寄存器的读写操作。
+```cpp
+struct kvm_lapic {
+        //GPA, Guest设置
+        unsigned long base_address;
+        struct kvm_io_device dev;
+        struct kvm_timer lapic_timer;
+        u32 divide_count;
+        struct kvm_vcpu *vcpu;
+        bool sw_enabled;
+        bool irr_pending;
+        bool lvt0_in_nmi_mode;
+        /* Number of bits set in ISR. */
+        s16 isr_count;
+        /* The highest vector set in ISR; if -1 - invalid, must scan ISR. */
+        int highest_isr_cache;
+        /**
+         * APIC register page.  The layout matches the register layout seen by
+         * the guest 1:1, because it is accessed by the vmx microcode.
+         * Note: Only one register, the TPR, is used by the microcode.
+         */
+        void *regs;
+        gpa_t vapic_addr;
+        struct gfn_to_hva_cache vapic_cache;
+        unsigned long pending_events;
+        unsigned int sipi_vector;
+};
+```
+
+kvm_lapic结构体代表一个虚拟LAPIC。base_address为LAPIC的基地址，这是一个GPA，是GUEST设置的LAPIC的基地址，在GUEST写某个LAPIC寄存器的时候，会带入该寄存器的GPA, 然后GPA减去base_address可以算出寄存器对于基地址的偏移量，然后到regs成员中真正的找到虚拟寄存器加以修改，请参见apic_mmio_read，apic_mmio_write；dev成员将lapic在KVM内核空间的KVM MMIO BUS总线上注册了IO地址空间，通过对IO地址空间的操作完成对LAPIC的操作。regs成员指向一个页面，这是一个HVA，指向一个HOST的页面，这个页面总记录了LAPIC是所有虚拟寄存，IRR，ISR，LVT等等，通过偏移量就可以得到某个虚拟寄存器的HVA，完成对该虚拟寄存器的读写操作。
 
 kvm_lapic_irq结构体是中断经过IOAPIC的PRT格式化出来的中断消息，从IOAPIC发送给LAPIC。
 
