--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -520,7 +520,9 @@ out:
 
 根据上图就可以理解`new->rt_entries = (void *)&new->map[nr_rt_entries];`这行代码的含义. (注, 新代码已经不是这样, 但是这部分内容保留, 便于了解发展演进)
 
-接下来是对每项的table的chip数组做初始化，这里初始化为-1. 接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
+接下来是对table的chip数组做初始化，这里初始化为-1. 
+
+接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`**中断路由项**做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
 
 ```cpp
 static int setup_routing_entry(struct kvm *kvm,
@@ -550,7 +552,7 @@ static int setup_routing_entry(struct kvm *kvm,
                 return r;
         if (e->type == KVM_IRQ_ROUTING_IRQCHIP)
                 rt->chip[e->irqchip.irqchip][e->irqchip.pin] = e->gsi;
-
+        // 添加到路由表的哈希链表
         hlist_add_head(&e->link, &rt->map[e->gsi]);
 
         return 0;
