--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -410,7 +410,7 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 }
 ```
 
-首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`**路由表**
+首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`**数组**，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`**路由表**
 
 看`kvm_set_irq_routing`,
 
@@ -464,10 +464,11 @@ int kvm_set_irq_routing(struct kvm *kvm,
                                 goto free_entry;
                         break;
                 }
-                // 
+                // 设置路由项
                 r = setup_routing_entry(kvm, new, e, ue);
                 if (r)
                         goto free_entry;
+                // 到下一项
                 ++ue;
         }
 
@@ -520,9 +521,9 @@ out:
 
 根据上图就可以理解`new->rt_entries = (void *)&new->map[nr_rt_entries];`这行代码的含义. (注, 新代码已经不是这样, 但是这部分内容保留, 便于了解发展演进)
 
-接下来是对table的chip数组做初始化，这里初始化为-1. 
+接下来是对table的chip数组做初始化，这里初始化为`-1`. 
 
-接下来就是一个循环，对每一个`kvm_kernel_irq_routing_entry`**中断路由项**做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
+接下来就是一个循环，对**每一个中断路由项**做初始化，该过程是通过`setup_routing_entry`函数实现的，这里看下该函数
 
 ```cpp
 static int setup_routing_entry(struct kvm *kvm,
@@ -532,6 +533,7 @@ static int setup_routing_entry(struct kvm *kvm,
 {
         struct kvm_kernel_irq_routing_entry *ei;
         int r;
+        // 获取到这个路由项的gsi号
         u32 gsi = array_index_nospec(ue->gsi, KVM_MAX_IRQ_ROUTES);
 
         /*
