--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -55,7 +55,13 @@ struct kvm {
 #endif
 }
 
-#define KVM_NR_IRQCHIPS 3
+// pic master
+#define KVM_IRQCHIP_PIC_MASTER   0
+// pic slave
+#define KVM_IRQCHIP_PIC_SLAVE    1
+// ioapic
+#define KVM_IRQCHIP_IOAPIC       2
+#define KVM_NR_IRQCHIPS          3
 #define KVM_IOAPIC_NUM_PINS 24
 #define KVM_IRQCHIP_NUM_PINS KVM_IOAPIC_NUM_PINS
 
@@ -78,6 +84,8 @@ struct kvm_irq_routing_table {
 ```
 
 `chip`是个**二维数组**, 表示**三个中断控制器芯片**的**每一个管脚**（最多24个pin）. 每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
+
+这三个中断控制器芯片是`pic master`, `pic slave`和`ioapic`
 
 `nr_rt_entries`表示**中断路由表**中存放的“**中断路由项**”的**数目**
 
@@ -204,7 +212,7 @@ PIC是**一个KVM虚拟机对应一个**，由`kvm.arch.vpic`成员指向
 
 `kvm_pic`结构体就是虚拟PIC的实现, `dev_master`、`dev_slave`、`dev_eclr`实现了**虚拟PIC设备**的**PIO地址空间**，并**注册**在**KVM内核的PIO总线**上，以便**完成设备的IO操作**，**ECLR**就是**控制中断触发方式的寄存器**; 
 
-pics执行一个数组，每个元素指向`kvm_kpic_state`结构体，`kvm_kpic_state`结构体**芯片**的**所有寄存器和状态**，包括**IRR**，**ISR**，**IMR**等.
+`pics`执行一个数组，每个元素指向`kvm_kpic_state`结构体，`kvm_kpic_state`结构体**芯片**的**所有寄存器和状态**，包括**IRR**，**ISR**，**IMR**等.
 
 ## 2.5. IOAPIC芯片结构
 
