--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -505,7 +505,9 @@ out:
 #define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 ```
 
-这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**; type是`KVM_IRQ_ROUTING_IRQCHIP`.
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**; 
+
+type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
 
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 
@@ -540,19 +542,23 @@ static int setup_routing_entry(struct kvm *kvm,
          * Do not allow GSI to be mapped to the same irqchip more than once.
          * Allow only one to one mapping between GSI and non-irqchip routing.
          */
+        // 遍历这个gsi对应的路由项链表
         hlist_for_each_entry(ei, &rt->map[gsi], link)
                 if (ei->type != KVM_IRQ_ROUTING_IRQCHIP ||
                     ue->type != KVM_IRQ_ROUTING_IRQCHIP ||
                     ue->u.irqchip.irqchip == ei->irqchip.irqchip)
                         return -EINVAL;
-
+        // 路由项的gsi
         e->gsi = gsi;
+        // 路由项的类型
         e->type = ue->type;
         // 设置该路由项的set方法
         r = kvm_set_routing_entry(kvm, e, ue);
         if (r)
                 return r;
+        // irq芯片, 而非MSI时候
         if (e->type == KVM_IRQ_ROUTING_IRQCHIP)
+                // 设置路由表的chip. 即引脚号
                 rt->chip[e->irqchip.irqchip][e->irqchip.pin] = e->gsi;
         // 添加到路由表的哈希链表
         hlist_add_head(&e->link, &rt->map[e->gsi]);
