--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -101,16 +101,23 @@ struct kvm_irq_routing_table {
 struct kvm_kernel_irq_routing_entry {
         // 该entry对应的GSI号
         u32 gsi;
+        // 类型
         u32 type;
         // 该GSI关联的触发方式
         int (*set)(struct kvm_kernel_irq_routing_entry *e,
                    struct kvm *kvm, int irq_source_id, int level,
                    bool line_status);
+        // 联合体
         union {
+                // irq芯片
                 struct {
+                        // 芯片类型
+                        // 有三个, pic master, pic slave和ioapic
                         unsigned irqchip;
+                        //
                         unsigned pin;
                 } irqchip;
+                // msi中断
                 struct {
                         u32 address_lo;
                         u32 address_hi;
