--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -509,6 +509,10 @@ out:
 
 type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
 
+irqchip:
+- irqchip是芯片类型, 有三种, pic master、pic slave和ioapic， 这里是ioapic
+- pin是引脚号， 等于irq
+
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 
 - `kvm_irq_routing_table`**结构**、
